[gd_scene load_steps=42 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://libs/gt_entity_mover_3d/gt_entity_mover_3d.gd" type="Script" id=2]
[ext_resource path="res://scenes/player_controller/player_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://libs/gt_state_machine/gt_state_machine.gd" type="Script" id=4]
[ext_resource path="res://entities/player/states/player_fall.gd" type="Script" id=5]
[ext_resource path="res://entities/player/states/player_idle.gd" type="Script" id=6]
[ext_resource path="res://entities/player/states/player_run.gd" type="Script" id=7]
[ext_resource path="res://entities/player/states/player_jump.gd" type="Script" id=8]
[ext_resource path="res://entities/player/weapons/player_weapon_double_pistol.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/player/scripts/player_damage_hurtbox.gd" type="Script" id=10]
[ext_resource path="res://libs/gt_health/gt_health.gd" type="Script" id=11]
[ext_resource path="res://entities/player/scripts/player_presence_hurtbox.gd" type="Script" id=12]
[ext_resource path="res://entities/player/scripts/player_muzzle_flash.gd" type="Script" id=13]
[ext_resource path="res://entities/player/scripts/player_head_bobbing.gd" type="Script" id=14]
[ext_resource path="res://entities/player/scripts/player_head_tilt.gd" type="Script" id=15]
[ext_resource path="res://libs/gt_random_audio_player/gt_random_audio_player.gd" type="Script" id=16]
[ext_resource path="res://entities/player/assets/step_cloth3.ogg" type="AudioStream" id=17]
[ext_resource path="res://entities/player/assets/step_cloth4.ogg" type="AudioStream" id=18]
[ext_resource path="res://entities/player/assets/step_cloth1.ogg" type="AudioStream" id=19]
[ext_resource path="res://entities/player/assets/step_cloth2.ogg" type="AudioStream" id=20]
[ext_resource path="res://entities/player/assets/player_pain (3).wav" type="AudioStream" id=21]
[ext_resource path="res://entities/player/assets/player_fall.wav" type="AudioStream" id=22]
[ext_resource path="res://entities/player/assets/player_jump.wav" type="AudioStream" id=23]
[ext_resource path="res://entities/player/assets/player_pain (2).wav" type="AudioStream" id=24]
[ext_resource path="res://entities/player/assets/player_pain (1).wav" type="AudioStream" id=25]
[ext_resource path="res://entities/player/scripts/footsteps_timer.gd" type="Script" id=26]
[ext_resource path="res://entities/player/scripts/player_sfx.gd" type="Script" id=27]
[ext_resource path="res://entities/player/assets/player_pain (4).wav" type="AudioStream" id=28]
[ext_resource path="res://entities/player/assets/player_pain (5).wav" type="AudioStream" id=29]
[ext_resource path="res://entities/player/assets/player_pain (6).wav" type="AudioStream" id=30]
[ext_resource path="res://entities/player/states/player_dead.gd" type="Script" id=31]

[sub_resource type="Animation" id=1]
resource_name = "pain"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("root/color_modulate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ready"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("root/color_modulate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1.5, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1.5, 1 )

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("DamageHurtbox/CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("DamageHurtbox/CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -1.9, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.6, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="SphereShape" id=8]
radius = 1.95

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )
entity_type = 1

[node name="HUD" type="CanvasLayer" parent="."]
layer = 9

[node name="root" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="color_modulate" type="ColorRect" parent="HUD/root"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
autoplay = "ready"
anims/pain = SubResource( 1 )
anims/ready = SubResource( 2 )

[node name="Weapon" parent="." instance=ExtResource( 9 )]
actor_path = NodePath("..")

[node name="SFX" type="Node" parent="."]
script = ExtResource( 27 )

[node name="footsteps_left" type="AudioStreamPlayer" parent="SFX"]
volume_db = 24.0
bus = "Sound"
script = ExtResource( 16 )
samples = [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ) ]

[node name="footsteps_right" type="AudioStreamPlayer" parent="SFX"]
volume_db = 24.0
bus = "Sound"
script = ExtResource( 16 )
samples = [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ) ]

[node name="jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 23 )
volume_db = -3.0
bus = "Sound"

[node name="fall_thud" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 22 )
volume_db = 3.0
bus = "Sound"

[node name="hurt" type="AudioStreamPlayer" parent="SFX"]
bus = "Sound"
script = ExtResource( 16 )
samples = [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ]

[node name="EntityMover" type="Node" parent="."]
script = ExtResource( 2 )
body_path = NodePath("../../Player")
MAX_RUN_SPEED = 22.0
RUN_ACCELERATION = 12.0
RUN_DECELERATION = 4.0
JUMP_HEIGHT = 4.5
JUMP_DAMPING = 0.6
stop_on_slopes = true

[node name="Health" type="Node" parent="."]
script = ExtResource( 11 )
deactivate_upon_death = true

[node name="Hitboxes" type="Spatial" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="DamageHurtbox" type="Area" parent="Hitboxes" groups=[
"player_hurtbox",
]]
collision_layer = 64
collision_mask = 32
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Hitboxes/DamageHurtbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DamageCooldownTimer" type="Timer" parent="Hitboxes/DamageHurtbox"]
wait_time = 0.5
one_shot = true

[node name="PresenceHurtbox" type="Area" parent="Hitboxes" groups=[
"entity_presence",
"player_presence",
]]
collision_layer = 16
collision_mask = 16
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}
actor_path = NodePath("../../../Player")

[node name="CollisionShape" type="CollisionShape" parent="Hitboxes/PresenceHurtbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hitboxes"]
autoplay = "default"
anims/default = SubResource( 5 )
anims/die = SubResource( 6 )

[node name="PlayerController" parent="." instance=ExtResource( 3 )]

[node name="Head" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="bobbing" type="Spatial" parent="Head"]
script = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}
input_controller_path = NodePath("../../PlayerController")
bobbing_amount = 0.35
bobbing_period = 0.65

[node name="tilt" type="Spatial" parent="Head/bobbing"]
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}
input_controller_path = NodePath("../../../PlayerController")
tilt_amount = 3.5
tilt_speed = 1.7

[node name="Camera" type="Camera" parent="Head/bobbing/tilt"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
current = true
far = 60.0
__meta__ = {
"_edit_lock_": true
}

[node name="muzzle_flash" type="SpotLight" parent="Head/bobbing/tilt/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
light_energy = 0.0
shadow_enabled = true
spot_range = 15.0
spot_attenuation = 0.574349
spot_angle_attenuation = 0.420448
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}
max_light_energy = 3.0

[node name="Tween" type="Tween" parent="Head/bobbing/tilt/Camera/muzzle_flash"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head"]
autoplay = "default"
anims/default = SubResource( 10 )
anims/die = SubResource( 9 )
anims/land_ground = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, 0 )
visible = false
shape = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
actor_path = NodePath("../../Player")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
fsm_path = NodePath("../../../Player/StateMachine")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
fsm_path = NodePath("../../../Player/StateMachine")

[node name="FootstepsTimer" type="Timer" parent="StateMachine/Run"]
wait_time = 0.25
script = ExtResource( 26 )

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Run"]
wait_time = 0.1
one_shot = true

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
fsm_path = NodePath("../../../Player/StateMachine")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
fsm_path = NodePath("../../../Player/StateMachine")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 31 )
fsm_path = NodePath("..")

[connection signal="died" from="." to="StateMachine/Run" method="_on_Player_died"]
[connection signal="died" from="." to="StateMachine/Fall" method="_on_Player_died"]
[connection signal="died" from="." to="StateMachine/Jump" method="_on_Player_died"]
[connection signal="died" from="." to="StateMachine/Idle" method="_on_Player_died"]
[connection signal="died" from="." to="Hitboxes/AnimationPlayer" method="play" binds= [ "die" ]]
[connection signal="died" from="." to="Head/AnimationPlayer" method="play" binds= [ "die" ]]
[connection signal="died" from="." to="Head/bobbing" method="disable"]
[connection signal="died" from="." to="Head/bobbing/tilt" method="disable"]
[connection signal="died" from="Health" to="." method="_on_Health_died"]
[connection signal="health_updated" from="Health" to="." method="_on_Health_health_updated"]
[connection signal="hurt" from="Hitboxes/DamageHurtbox" to="Hitboxes/DamageHurtbox/DamageCooldownTimer" method="start"]
[connection signal="hurt" from="Hitboxes/DamageHurtbox" to="SFX/hurt" method="play_random"]
[connection signal="hurt" from="Hitboxes/DamageHurtbox" to="HUD/AnimationPlayer" method="play" binds= [ "pain" ]]
[connection signal="take_damage" from="Hitboxes/DamageHurtbox" to="Health" method="lose_health"]
[connection signal="just_pressed" from="PlayerController/jump" to="StateMachine/Run" method="_on_jump_just_pressed"]
[connection signal="just_pressed" from="PlayerController/jump" to="StateMachine/Idle" method="_on_jump_just_pressed"]
[connection signal="just_released" from="PlayerController/jump" to="StateMachine/Jump" method="_on_jump_just_released"]
[connection signal="pressed" from="PlayerController/shoot" to="." method="shoot"]
[connection signal="state_entered" from="StateMachine/Run" to="StateMachine/Run/FootstepsTimer" method="start"]
[connection signal="state_exited" from="StateMachine/Run" to="StateMachine/Run/FootstepsTimer" method="stop"]
[connection signal="left_foot" from="StateMachine/Run/FootstepsTimer" to="SFX/footsteps_left" method="play_random"]
[connection signal="right_foot" from="StateMachine/Run/FootstepsTimer" to="SFX/footsteps_right" method="play_random"]
[connection signal="timeout" from="StateMachine/Run/FootstepsTimer" to="StateMachine/Run/FootstepsTimer" method="_on_timeout"]
[connection signal="timeout" from="StateMachine/Run/CoyoteTimer" to="StateMachine/Run" method="_on_CoyoteTimer_timeout"]
[connection signal="state_entered" from="StateMachine/Jump" to="SFX/jump" method="play"]
[connection signal="state_exited" from="StateMachine/Fall" to="SFX/fall_thud" method="play"]
[connection signal="state_exited" from="StateMachine/Fall" to="Head/AnimationPlayer" method="play" binds= [ "land_ground" ]]

[editable path="PlayerController"]
